<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="4dp"


    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="255dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/flowerImageView"
            android:layout_width="0dp"
            android:layout_height="220dp"
            android:contentDescription="@string/content_description_media"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/flowerTypeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/semiTransparentPri"
            android:padding="8dp"
            android:text="@string/title"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="#170C4A"
            app:layout_constraintStart_toStartOf="@+id/flowerImageView"
            app:layout_constraintTop_toTopOf="@+id/flowerImageView" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteButton"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/delete_from_my_plants"
            android:gravity="center"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:padding="5dp"
            app:backgroundTint="@color/semiTransparentPri"
            app:cornerRadius="0dp"
            app:icon="@drawable/delete"
            app:iconSize="18dp"
            app:iconTint="#0D47A1"
            app:layout_constraintBottom_toBottomOf="@+id/flowerImageView"
            app:layout_constraintEnd_toEndOf="@+id/flowerImageView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/updateButton"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/updateButton"
            android:gravity="center"
            android:insetLeft="0dp"
            android:insetBottom="0dp"
            android:padding="5dp"
            app:backgroundTint="@color/semiTransparentPri"
            app:cornerRadius="0dp"
            app:icon="@drawable/heart_plus"
            app:iconSize="18dp"
            app:iconTint="#0D47A1"
            app:layout_constraintBottom_toBottomOf="@+id/flowerImageView"
            app:layout_constraintStart_toStartOf="@+id/flowerImageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
