<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF3E0"
    tools:context=".ui.activity.AllFlowersActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_scrollFlags="scroll|enterAlways|snap">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary_color"

            app:title="Overview" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_gravity="top|center_horizontal"
            app:indicatorColor="@color/colorBlue"
            android:visibility="gone" />

    </com.google.android.material.appbar.AppBarLayout>



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="6dp"
            android:paddingEnd="6dp">

            <!-- My saved flowers -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/mySavedFlowersTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/my_saved_flowers"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textColor="#170C4A" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/seeAllSaved"
                    style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all"
                    android:textColor="#0D47A1"
                    app:backgroundTint="@color/semiTransparentPri"
                    app:icon="@drawable/flowers"
                    app:iconPadding="8dp"
                    app:iconTint="#0D47A1" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewSaved"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:clipToPadding="false"

                />

            <!-- Flowers not yet saved -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/flowersNotYetSavedTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/flowers_not_yet_saved"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textColor="#170C4A" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/seeAllNotYetSaved"
                    style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all"
                    android:textColor="#0D47A1"
                    app:backgroundTint="@color/semiTransparentPri"
                    app:icon="@drawable/flowers"
                    app:iconPadding="8dp"
                    app:iconTint="#0D47A1" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewNotYetSaved"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="?attr/actionBarSize"
                android:clipToPadding="false"
                android:paddingBottom="?attr/actionBarSize"

                />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_navigation"
        style="@style/Widget.App.BottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="@color/bottom_appbar_menu"
        app:menu="@menu/bottom_app_bar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/learnMoreButton"

        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"

        android:layout_marginBottom="16dp"
        android:text="@string/my_plants"
        android:textColor="@color/colorBlue"
        app:backgroundTint="@color/transColorBlue"
        app:icon="@drawable/flowers"
        app:iconPadding="6dp"
        app:iconTint="@color/colorBlue"
        app:showAsAction="always" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/action_camera"
        style="@style/Widget.App.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="TODO"
        app:backgroundTint="#E6E4BF"
        app:layout_anchor="@id/bottom_navigation"
        app:srcCompat="@drawable/photo_camera" />

    <LinearLayout
        android:id="@+id/placeholderLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Placeholder Image"
            android:src="@drawable/photo_camera" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Take a picture of a flower"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="to see the results"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/black" />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
